# Scryer

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  BLUEPRINT_ISSUE89.md  BLUEPRINT_ISSUE97.md  BLUEPRINT_ISSUE_141.md  BLUEPRINT_ISSUE_145.md  Dockerfile  IMPLEMENTATION_REPORT.md  README.md  TODO.md  alembic.ini  conftest.py  docker-compose.test.yml  docker-compose.yml  pyproject.toml  run_ci_tests.py  verify_config.py  verify_implementation.py  wait-ci.sh
.github/: dependabot.yml
.github/workflows/: ci-docker.yml  ci-e2e.yml  ci-python.yml  claude-code-review.yml  claude-pr-review.yml  claude.yaml  claude.yml  security-scan.yml
alembic/: env.py  script.py.mako
docs/: INDEX.md  alembic-workflow.md  blueprint-issue-116-summary.md  blueprint-issue-116.md  docker-setup.md  frontend-blueprint.md  frontend-style-guide.md  git-workflow.md  software-design.md
docs/architecture/: session-manager.md
docs/blueprint/: issue-152-header-auth-ui.md  issue-153-navigation-auth-integration-test.md
docs/blueprints/: logout-nav-integration-blueprint.md  profile-e2e-blueprint.md  profile-page-blueprint.md
docs/frontend-stubs/: STUBS.md  init.sh  package.json.template
frontend/: .editorconfig  .env.example  .env.test  .eslintrc.json  .prettierignore  .prettierrc.json  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  test-dependencies.json  tsconfig.json
frontend/__mocks__/: fileMock.js
frontend/__tests__/: README.md  TESTING_CHECKLIST.md  TESTING_SUMMARY.md
frontend/__tests__/e2e-setup/: playwright.config.test.ts
frontend/e2e/: globalSetup.ts  globalTeardown.ts
frontend/e2e/fixtures/: example.spec.ts
frontend/e2e/fixtures/auth/: test-data.ts
frontend/e2e/helpers/: auth-helpers.ts  index.ts
frontend/e2e/helpers/__tests__/: auth-helpers.spec.ts  constants.spec.ts  errors.spec.ts  index.spec.ts
frontend/e2e/pages/: auth-pages.ts
frontend/e2e/pages/__tests__/: auth-pages.spec.ts
frontend/e2e/specs/auth/: login.spec.ts  logout.spec.ts  profile.spec.ts  register.spec.ts  route-protection.spec.ts  token-persistence.spec.ts
frontend/src/: middleware.test.ts  middleware.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/login/: page.test.tsx  page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/auth/: LoginForm.tsx  PasswordInput.tsx  RegisterForm.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  HeaderAuth.tsx  MainLayout.tsx  MobileMenu.tsx  Navigation.tsx  PageSkeleton.tsx  index.ts
frontend/src/components/profile/: ProfileForm.tsx  UserInfoCard.tsx  index.ts
frontend/src/components/ui/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  Dropdown.tsx  Input.tsx  Modal.tsx  Select.tsx  Spinner.tsx  Tabs.tsx  Toast.tsx  index.ts
frontend/src/config/: navigation.ts
frontend/src/lib/: config.ts  constants.ts
frontend/src/lib/api/: auth-api.ts  auth-client.stub.ts  auth-client.ts  client.ts  endpoints.ts  types.ts
frontend/src/lib/auth/: guards.ts  session-manager.ts
frontend/src/lib/hooks/: useApi.ts  useAuth.ts  useAutoLogin.ts  useClickOutside.ts  useDebounce.ts  useLocalStorage.ts  useMediaQuery.ts  useToast.ts
frontend/src/lib/middleware/: route-matcher.ts  route-matcher.types.ts
frontend/src/lib/storage/: cookie-manager.ts  index.ts  token-storage.ts
frontend/src/lib/utils/: cn.ts  format.ts  index.ts  validation.ts
frontend/src/store/: README.md  index.ts  types.ts  ui-store.ts
frontend/src/types/: api.ts  auth.ts  index.ts  layout.ts  models.ts
scripts/: create_env_example.py  docker-entrypoint.sh  run-integration-tests.sh  wait-for-postgres.sh
src/: __init__.py
src/backend/: __init__.py
src/backend/app/: __init__.py  main.py
src/ci/: __init__.py  cov_report.py  docker_validator.py  security_scanner.py
tests/: run_backend_tests.sh  test_ci_cov_report.py  test_ci_docker_validator.py  test_ci_security_scanner.py  test_dev_toolchain_config.py  test_docker_environment.py  test_e2e_ci_workflow.py  test_frontend_style_config.py  test_smoke.py
tests/backend/: BLUEPRINT_ISSUE53.md  README.md  README_MODELS_TESTS.md  TEST_CHECKLIST.md  TEST_CHECKLIST_ISSUE53.md  TEST_SUMMARY.md  TEST_SUMMARY_ISSUE52.md  TEST_SUMMARY_ISSUE53.md  __init__.py  conftest.py  test_api_deps.py  test_api_router.py  test_auth_api_routes.py  test_auth_refresh_routes.py  test_config.py  test_core_database.py  test_core_exceptions.py  test_core_redis.py  test_core_security.py  test_docker_compose_config.py  test_health_enhanced.py  test_imports.py  test_logger.py  test_logging_integration.py  test_main.py  test_middleware_request_id.py  test_models_base.py  test_models_content.py  test_models_query.py  test_models_relationships.py  test_models_search_result.py  test_models_task.py  test_models_user.py  test_repositories_user.py  test_schemas_auth.py  test_schemas_common.py  test_schemas_user_update.py  test_services_auth.py  test_services_cache.py  test_user_update_api.py  (+1 more)
tests/integration/: README.md  TEST_GENERATION_REPORT_ISSUE89.md  __init__.py  conftest.py  helpers.py  test_alembic.py  test_alembic_docker.py  test_alembic_docker_README.md  test_auth_api.py  test_auth_middleware.py  test_database.py  test_health.py  test_redis.py  validate_alembic_tests.py
tests/integration/helpers/: __init__.py  migration_helpers.py
(+105 files in other folders)
