[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scryer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis[hiredis]>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov==6.0.0",
    "pip-audit==2.8.0",
    "black==24.10.0",
    "isort==5.13.2",
    "mypy==1.14.1",
    "flake8==7.3.0",
    "httpx>=0.28.0",
    "pyyaml",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "redis.asyncio"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = [".", "src"]
addopts = "-v --strict-markers --ignore=build --ignore=tests/integration --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "integration: marks tests as integration tests (requires Docker containers)",
    "unit: marks tests as unit tests (no external dependencies)",
    "slow: marks tests as slow-running",
    "postgres: marks tests that require PostgreSQL",
    "redis: marks tests that require Redis",
    "docker: marks tests that require Docker environment",
]
